# CrewAI

./: README.md
game_developer/: README.md  pyproject.toml
game_developer/src/game_developer/: crew.py  main.py
game_developer/src/game_developer/config/: agents.yaml  tasks.yaml
job_hunting/: crew.py  main.py
job_hunting/config/: agents.yaml  tasks.yaml
sample/: README.md  pyproject.toml  report.md
sample/src/sample/: crew.py  main.py
